# achem

./: .env.example  .gitignore  LICENSE  README.md  achem.sh  plan.txt  pyproject.toml
.github/workflows/: release.yml
src/achem/: __init__.py  __main__.py  academic_client.py  async_engine.py  cache_manager.py  commands.py  config_manager.py  content_processor.py  context_classifier.py  duckduckgo_client.py  export_manager.py  gemini_summarizer.py  groq_summarizer.py  huggingface_summarizer.py  local_summarizer.py  main.py  openrouter_summarizer.py  output_formatter.py  planner.py  positional_ranker.py  reasoning_engine.py  search_router.py  spell_checker.py  sqlite_cache.py  text_analyzer.py  topic_classifier.py  tui.py  user_input.py  web_scraper.py  wikipedia_client.py
wiki/: Home.md
